[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/FileOpen.gd" type="Script" id=1]
[ext_resource path="res://Materials/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/naga/Naga/OpenType-PS/Naga.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/Parser.gd" type="Script" id=4]
[ext_resource path="res://Scripts/UploadTimer.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Visualizer.gd" type="Script" id=6]
[ext_resource path="res://Scripts/Canvas.gd" type="Script" id=7]
[ext_resource path="res://Scripts/FileDownload.gd" type="Script" id=8]
[ext_resource path="res://Scripts/Writer.gd" type="Script" id=9]
[ext_resource path="res://Scripts/DownloadTime.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=3]
size = 32
outline_size = 1
outline_color = Color( 0.109804, 0.133333, 0.317647, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="ShaderMaterial" id=2]

[node name="Node2D" type="Node2D"]
position = Vector2( 1, -1 )

[node name="Uploader" type="ColorRect" parent="."]
margin_right = 350.0
margin_bottom = 600.0
color = Color( 0.0941176, 0.0901961, 0.0901961, 1 )

[node name="Label" type="Label" parent="Uploader"]
margin_left = 115.0
margin_top = 10.0
margin_right = 224.0
margin_bottom = 40.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Upload"
align = 1
valign = 1

[node name="FileOpen" type="FileDialog" parent="Uploader"]
visible = true
material = SubResource( 2 )
margin_left = 65.0
margin_top = 237.0
margin_right = 307.0
margin_bottom = 514.0
theme = ExtResource( 2 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.csv ; Comma Separated Values" )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="Uploader"]
margin_right = 350.0
margin_bottom = 310.0

[node name="Button" type="Button" parent="Uploader/CenterContainer"]
margin_left = 125.0
margin_top = 142.0
margin_right = 225.0
margin_bottom = 167.0
rect_min_size = Vector2( 100, 25 )
theme = ExtResource( 2 )
text = "Upload File"

[node name="Timer" type="Label" parent="Uploader"]
margin_left = 10.0
margin_top = 580.0
margin_right = 50.0
margin_bottom = 600.0
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Visualizer2" type="ColorRect" parent="."]
margin_left = 350.0
margin_right = 674.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -1068, 167 )
color = Color( 0.160784, 0.239216, 0.290196, 1 )

[node name="Label" type="Label" parent="Visualizer2"]
margin_left = 95.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 40.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Visualize"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="Visualizer2"]
margin_left = 25.0
margin_top = 150.0
margin_right = 25.0
margin_bottom = 150.0
script = ExtResource( 7 )

[node name="Downloader" type="ColorRect" parent="."]
margin_left = 674.0
margin_right = 1024.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( -324, 200 )
color = Color( 0.0941176, 0.0901961, 0.0901961, 1 )

[node name="FileDialog" type="FileDialog" parent="Downloader"]
visible = true
margin_left = 24.0
margin_top = 244.0
margin_right = 339.0
margin_bottom = 504.0
theme = ExtResource( 2 )
window_title = "Save as .pcd"
resizable = true
mode_overrides_title = false
access = 2
filters = PoolStringArray( "*.pcd ; Peppa Color Data" )
script = ExtResource( 8 )

[node name="Label" type="Label" parent="Downloader"]
margin_left = 95.0
margin_top = 10.0
margin_right = 235.0
margin_bottom = 40.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Download"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="Downloader"]
margin_right = 350.0
margin_bottom = 310.0

[node name="Button" type="Button" parent="Downloader/CenterContainer"]
margin_left = 119.0
margin_top = 142.0
margin_right = 231.0
margin_bottom = 167.0
rect_min_size = Vector2( 100, 25 )
theme = ExtResource( 2 )
text = "Download File"

[node name="DownloadTime" type="Label" parent="Downloader"]
margin_left = 89.0
margin_top = 584.0
margin_right = 323.0
margin_bottom = 598.0
script = ExtResource( 10 )

[node name="Parser" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Visualizer" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Writer" type="Node" parent="."]
script = ExtResource( 9 )

[connection signal="file_selected" from="Uploader/FileOpen" to="Parser" method="_on_FileOpen_file_selected"]
[connection signal="pressed" from="Uploader/CenterContainer/Button" to="Uploader/FileOpen" method="_on_Button_pressed"]
[connection signal="file_selected" from="Downloader/FileDialog" to="Writer" method="_on_FileDialog_file_selected"]
[connection signal="pressed" from="Downloader/CenterContainer/Button" to="Downloader/FileDialog" method="_on_Button_pressed"]
[connection signal="BeginRender" from="Parser" to="Visualizer" method="_on_Parser_BeginRender"]
[connection signal="ProcessData" from="Parser" to="Visualizer" method="_on_Parser_ProcessData"]
[connection signal="ProcessTime" from="Parser" to="Uploader/Timer" method="_on_Parser_ProcessTime"]
[connection signal="RenderComplete" from="Parser" to="Visualizer" method="_on_Parser_RenderComplete"]
[connection signal="StorePath" from="Parser" to="Writer" method="_on_Parser_StorePath"]
[connection signal="RenderComplete" from="Visualizer" to="Visualizer2/TextureRect" method="_on_Visualizer_RenderComplete"]
[connection signal="RenderData" from="Writer" to="Downloader/DownloadTime" method="_on_Writer_RenderData"]
